setting.gradle spring repo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,9 @@
-rootProject.name = 'java_project'
+pluginManagement {
+    repositories {
+        maven { url 'https://repo.spring.io/milestone' }
+        maven { url 'https://repo.spring.io/snapshot' }
+        gradlePluginPortal()
+    }
+}
 
+rootProject.name = 'java_project'
